--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,6 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-    <!-- ²Î¿¼ÏîÄ¿ -->
     <!--
     
     https://github.com/buildlackey/cep
@@ -60,6 +59,11 @@
 			<artifactId>websocket-client</artifactId>
 			<version>9.2.0</version>
 		</dependency>-->
+		<dependency>  
+		    <groupId>com.alibaba</groupId>  
+		    <artifactId>fastjson</artifactId>  
+		    <version>1.1.41</version>  
+		</dependency>  
     </dependencies>
     <build>
         <plugins>
